<resources>
    <string name="app_name">WeWerk_V12</string>

    <string name="text_discover">Discover</string>
    <string name="text_create">Create</string>
    <string name="text_programs">Programs</string>
    <string name="text_profile">Profile</string>
    <string name="movement_name">movement name</string>
    <string name="username">username</string>
    <string name="text_fatloss">fat loss</string>
    <string name="text_cardio">cardio</string>
    <string name="text_strength">strength</string>
    <string name="text_hypertrophy">hypertrophy</string>
    <string name="text_plyometry">plyometry</string>
    <string name="text_stretching">stretching</string>
    <string name="text_username">username</string>
    <string name="text_password">password</string>
    <string name="text_rememberme">remember me</string>
    <string name="text_login">login</string>
    <string name="text_signup">sign up</string>
    <string name="first_name_nlastname">First Name  LastName</string>
    <string name="text_followers">Follower</string>
    <string name="number_following">182</string>
    <string name="text_following">Following</string>
    <string name="text_follow">FOLLOW</string>
    <string name="number_followers">169</string>
    <string name="text_message">MESSAGE</string>
    <string name="text_myworkouts">My Workouts</string>
    <string name="text_favoriteprograms">Favorite Workouts</string>
    <string name="number_programs_created">158</string>
    <string name="create_program">Create program</string>
    <string name="add_day">+add Day</string>
    <string name="day_1">Day 1</string>
    <string name="sollicited_muscles">Sollicited muscles :</string>
    <string name="workout_name">Workout name</string>
    <string name="add_exercise">+add exercise</string>
    <string name="create_a_workout_program">CREATE A WORKOUT PROGRAM</string>
    <string name="description">Description</string>
    <string name="followers">Followers</string>
    <string name="firstname_lastname">FirstName LastName</string>
    <string name="text_searchonwewerk">Search on weWerk</string>
    <string name="text_settings">Settings</string>
    <string name="text_sendfeedback">Send Feedback</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_timer_button">Timer</string>
    <string name="text_training_ressources">Training Ressources</string>
    <string name="text_calculate_bmr">Calculate BMR</string>
    <string name="text_calculate_imc">Calculate IMC</string>
    <string name="text_findonerepmax">Find one rep max</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_calculate_your_bmr">Calculate your BMR</string>
    <string name="text_what_is_bmr">what is bmr</string>
    <string name="text_interpreting_your_bmr">Interpreting your BMR</string>
    <string name="text_calculate_your_bmi">Calculate your BMI</string>
    <string name="text_what_is_bmi">What is BMI</string>
    <string name="text_interpreting_your_bmi">Interpreting your BMI</string>
    <string name="text_calculating_your_bmi">Calculating your BMI</string>
    <string name="text_find_your_one_rep_max">Find your one rep max</string>
    <string name="text_what_is_a_one_rep_max">what is a one rep max</string>
    <string name="text_interpreting_your_one_rep_max">interpreting your one rep max</string>
    <string name="text_finding_your_one_rep_max">Finding your one rep max</string>
    <string name="text_general">General</string>
    <string name="text_drafts">Drafts</string>
    <string name="text_account">account</string>
    <string name="text_logout">logout</string>
    <string name="text_help">help</string>
    <string name="text_report">report</string>
    <string name="text_legal">Legal</string>
    <string name="text_credits">Credits</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_terms">Terms</string>
    <string name="text_calculator">Calculator</string>
    <string name="text_rep">Rep</string>
    <string name="text_weight">Weight</string>
    <string name="text_set">Set</string>
    <string name="text_calculate">Calculate</string>
    <string name="text_enter_your_rep">Enter your rep</string>
    <string name="text_enter_your_lifted_weights_in_kilograms">Enter your lifted weight in kilograms</string>
    <string name="text_upload_and_download">Upload and Download</string>
    <string name="text_send_feedback">Send Feedback</string>
    <string name="text_start">Start</string>
    <string name="text_stop">Stop</string>
    <string name="text_reset">Reset</string>

</resources>
