<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ProfileStalkingActivity">

    <LinearLayout
        android:id="@+id/contactMeLinearLayout"
        android:layout_width="match_parent"
        android:gravity="right|center_vertical"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/discover_layout_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/followButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/text_follow"
            android:textColor="#03ae7d"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/messageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/text_message"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileStalking_profilePicture_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/profileStatisticsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/programLinearLayout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/programNumberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_programs_created"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/programTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_programs"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/followerLinearLayout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followerNumberTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_followers"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followersTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/followingLinearLayout"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/followingNumbertextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_following"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_following"
                    android:textAlignment="center"
                    android:textColor="#fff"

                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userInformationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/realNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname_lastname"
            android:textColor="#fff"
            android:textSize="@dimen/profile_realname_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username" />

    </LinearLayout>


    <!--TODO: lorsque la page de programmes sera faite, il faudra l'implémenter dans le profil-->

</LinearLayout>