<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.ProfileFragment">

    <!--<Space-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="10dp" />-->

    <ImageView
        android:id="@+id/profile_settings_imageButton"
        android:layout_width="@dimen/profile_settings_imageview"
        android:layout_height="@dimen/profile_settings_imageview"
        android:layout_gravity="right"
        android:src="@drawable/settings"
        android:tint="@color/white" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:id="@+id/userInformationLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/realNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstname_lastname"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/profile_realname_textsize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <LinearLayout
        android:id="@+id/profileStatisticsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/white_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        android:paddingRight="12dp">

        <LinearLayout
            android:id="@+id/programLinearLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/programNumberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_programs_created"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_programs"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/followerLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followerNumberTextView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/number_followers"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/followingLinearLayout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/followingNumbertextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_following"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_following"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/profile_message_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_button"
            android:text="@string/text_message" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_white_line_height"
            android:background="@color/white_transparent"
            android:orientation="vertical" />

        <Button
            android:id="@+id/profile_calendar_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_button"
            android:text="@string/text_calendar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_white_line_height"
            android:background="@color/white_transparent"
            android:orientation="vertical" />

        <Button
            android:id="@+id/profile_timer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_button"
            android:text="@string/text_timer_button" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_white_line_height"
            android:background="@color/white_transparent"
            android:orientation="vertical" />

        <Button
            android:id="@+id/profile_calculate_bmr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_button"
            android:text="@string/text_calculate_bmr" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_white_line_height"
            android:background="@color/white_transparent"
            android:orientation="vertical" />

        <Button
            android:id="@+id/profile_calculate_imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_button"
            android:text="@string/text_calculate_your_bmi" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_white_line_height"
            android:background="@color/white_transparent"
            android:orientation="vertical" />

        <Button
            android:id="@+id/profile_findOneRepMax_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_button"
            android:text="@string/text_findonerepmax" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_white_line_height"
            android:background="@color/white_transparent"
            android:orientation="vertical" />
        <!--TODO: why does the space betweenmy buttons gets smaller and where is the setting and feedback buttons? -->

        <Button
            android:id="@+id/profile_training_ressources_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/profile_button"
            android:text="@string/text_training_ressources" />


        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/settings_white_line_height"-->
        <!--android:background="@color/white_transparent"-->
        <!--android:orientation="vertical" />-->

        <!--<Button-->
        <!--android:id="@+id/sendfeedback_button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@drawable/profile_button"-->
        <!--android:text="@string/text_sendfeedback" />-->
    </LinearLayout>


    <!--<FrameLayout-->
    <!--android:id="@+id/profileContainer_frameLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_marginBottom="16dp">-->

    <!--</FrameLayout>-->

    <!--TODO: lorsque la page de programmes sera faite, il faudra l'implémenter dans le profil-->

</LinearLayout>

