<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".fragments.SettingsFragment">

    <ImageView
        android:id="@+id/settings_settings_imageButton"
        android:layout_width="@dimen/profile_settings_imageview"
        android:layout_height="@dimen/profile_settings_imageview"
        android:layout_gravity="right"
        android:src="@drawable/settings"
        android:tint="@color/white" />
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="@dimen/toolbar_height"-->
    <!--android:gravity="center_vertical"-->
    <!--android:weightSum="100">-->

    <!--<ImageView-->
    <!--android:id="@+id/settings_back_button"-->
    <!--android:layout_width="@dimen/back_button_widt"-->
    <!--android:layout_height="@dimen/back_button_height"-->
    <!--android:layout_weight="10"-->
    <!--android:src="@drawable/back"-->
    <!--android:tint="@color/white" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="80"-->
    <!--android:text="@string/text_settings"-->
    <!--android:textSize="@dimen/toolbar_title_textsize" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/toolbar_padding"
        android:paddingRight="@dimen/toolbar_padding">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_height_between_subtitles" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_general"

                android:textAllCaps="true"
                android:textColor="@color/white_transparent"
                android:textSize="@dimen/workoutProgramView_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_white_line_height"
                android:background="@color/white_transparent"
                android:orientation="vertical" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/settings_button"
                android:text="@string/text_drafts"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/toolbar_padding"
        android:paddingRight="@dimen/toolbar_padding">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_height_between_subtitles" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_upload_and_download"

                android:textAllCaps="true"
                android:textColor="@color/white_transparent"
                android:textSize="@dimen/workoutProgramView_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_white_line_height"
                android:background="@color/white_transparent"
                android:orientation="vertical" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/settings_button"
                android:text="@string/text_drafts"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/toolbar_padding"
        android:paddingRight="@dimen/toolbar_padding">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_height_between_subtitles" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_account"

                android:textAllCaps="true"
                android:textColor="@color/white_transparent"
                android:textSize="@dimen/workoutProgramView_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_white_line_height"
                android:background="@color/white_transparent"
                android:orientation="vertical" />

            <Button
                android:id="@+id/settings_logout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/settings_button"
                android:text="@string/text_logout"
                android:textAlignment="center" />

            <Button
                android:id="@+id/settings_help"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/settings_button"
                android:text="@string/text_help"
                android:textAlignment="center" />

            <Button
                android:id="@+id/settings_report"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/settings_button"
                android:text="@string/text_report"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_legal"
                android:textAllCaps="true"
                android:textColor="@color/white_transparent"
                android:textSize="@dimen/workoutProgramView_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/settings_white_line_height"
                android:background="@color/white_transparent"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/settings_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_button"
                android:padding="@dimen/padding_between_subtitle_description"
                android:text="@string/text_terms" />

            <TextView
                android:id="@+id/settings_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_button"
                android:padding="@dimen/padding_between_subtitle_description"
                android:text="@string/text_privacy_policy" />

            <TextView
                android:id="@+id/settings_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_button"
                android:padding="@dimen/padding_between_subtitle_description"
                android:text="@string/text_credits" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>