<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    tools:context=".activities.TimerActivity">


    <Chronometer
        android:id="@+id/timer_chronometer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textAlignment="center"
        android:textSize="60sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_white_line_height"
        android:background="@color/white_transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/timer_start_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/text_start" />

        <Button
            android:id="@+id/timer_stop_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/text_stop" />

        <Button
            android:id="@+id/timer_reset_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/text_reset" />
    </LinearLayout>
</LinearLayout>